# chain-probe

./: .gitignore  README.md
.github/workflows/: security-audit.yml
backend/: .env.example  Cargo.toml
backend/src/: ai_enricher.rs  ast_visitor.rs  call_graph.rs  chain_detector.rs  data_flow.rs  detectors.rs  diff.rs  exploits.rs  invariant.rs  lib.rs  main.rs  patterns.rs  pdf.rs  permission_model.rs  pro_audits.rs  profiler.rs  rate_limit.rs  report.rs  routes.rs  scoring.rs  storage.rs  taint.rs  token_flow.rs  trust.rs  types.rs  vuln_db.rs
frontend/: .env.example  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
frontend/component/landing/: Cta-footer.tsx  deployment-options.tsx  experience-samvaad.tsx  future-ai.tsx  header.tsx  hero.tsx  logo-carousel.tsx  platform-stack.tsx  research-updates.tsx  testimonials.tsx
frontend/public/: index.html  site.webmanifest
frontend/src/: App.tsx  styles.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuditPage.tsx  LandingPage.tsx  Layout.tsx  ReportPage.tsx  ui.tsx
frontend/src/context/: AppContext.tsx
frontend/src/lib/: constants.ts  fix_diff.ts  poc_generator.ts  styles.ts
frontend/src/styles/: globals.css
(+43 files in other folders)
